backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-master-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: pdf-master
