backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-master-ingress
spec:
  rules:
    - host: minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdf-master-service
                port:
                  number: 8080
